# organizations

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  backup.sql  docker-compose.yml  pyproject.toml
alertmanager/: alertmanager.yaml  smtp_password.txt
app/: deps.py  main.py
app/api/routers/: __init__.py  debug.py  health.py  organization.py
app/config/: database.py  settings.py
app/models/: __init__.py  activity.py  building.py  organization.py
app/repositories/: base.py  organization.py
app/schemas/: organization.py
app/services/: organization.py
migration/: env.py  seed_data.sql
migration/versions/: 01010547b2b9_init_db.py  c2e05c19f44a_add_postgis_index_for_nearby_search.py  f446d74c1717_check_constraint.py  f501911fd08b_fix_organization_activity_primary_key.py
prometheus/: alerts.yaml  prometheus.yaml
