[project]
name = "profect-for-testovoe-zadanie"
version = "0.1.0"
description = "Проект для тестирования разного рода функциональностей FastAPI"
authors = [
    {name = "Efremov Nikita"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.127.0,<0.128.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
